Bug 815569 - Pause (rather than mute) media elements interrupted by the audio channel service.  r=roc